# erenshor-data-mining

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  <MagicMock id='4459480128'>  AGENTS.md  CLAUDE.md  Erenshor.code-workspace  Erenshor.sln  README.md  compare_spell_durations.py  config.local.toml.example  config.toml  crafting-recipes-display.sql  export.sh  mapping.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sad-bosses.txt  spell-durations.txt  test_enrichment.py
.beads/: .beads-credential-key  metadata.json
.beads/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.omp/: mcp.json
.omp/extensions/: beads.ts
Assets/Editor/: AscensionDBRecord.cs  CharacterDBRecord.cs  CharacterDatabaseExporter.cs  CharacterExporter.cs  DatabaseExporter.cs  DatabaseExporterWindow.cs  DatabaseManager.cs  DatabaseOperation.cs  ExportBatch.cs  FactionDBRecord.cs  ItemDBRecord.cs  ItemDatabaseExporter.cs  ItemExporter.cs  LootDropDBRecord.cs  LootDropExporter.cs  LootTableProbabilityCalculator.cs  LootTableProbabilityEditor.cs  QuestDBRecord.cs  SkillDBRecord.cs  SpawnPointCharacterDBRecord.cs  SpawnPointDBRecord.cs  SpawnPointExporter.cs  SpellDBRecord.cs  SpellExporter.cs  ZoneAtlasEntryDBRecord.cs  export.sql
Misc/: physical-damage-mitigation.html
cli/commands/: clean.sh  config.sh  deploy.sh  doctor.sh  download.sh  export.sh  extract.sh  status.sh  symlink.sh  update.sh
docs/: PRD-data-pipeline-rewrite.md  TROUBLESHOOTING.md  architecture-analysis.md
docs/legacy/: IMAGE_EXTRACTION_DESIGN.md
docs/plans/: 2026-03-27-guide-dependency-graph.md  2026-03-28-guide-audit-findings.md  2026-03-28-guide-class-architecture.md  2026-03-28-nav-target-persistence.md  2026-03-28-navigation-engine-redesign.md  2026-03-29-angler-ring-nav-fix.md  2026-03-29-marker-actionability-fix.md  2026-03-29-marker-keyword-text-fix.md  2026-04-08-quest-frontier-graph-runtime-cutover.md  2026-04-09-compiled-guide-json-format.md  2026-04-09-entity-graph-removal-design.md  2026-04-09-quest-frontier-graph-runtime-cutover-execution.md  2026-04-15-display-model.md  2026-04-18-adventure-guide-nav-stall-consolidation.md  hotrepl-hot-reload-improvements.md  nav-target-selection.md  salvaged-config-notes.md
docs/questions/: backup-service.md  categories.md  field-preservation.md  legacy-templates.md  page-generators.md  preconditions.md  repository-queries.md  wiki-service.md
docs/refactoring-plan/: 01-REQUIREMENTS_ANALYSIS.md  02-REQUIREMENTS_SUMMARY.md  03-requirements-feedback.md  04-deep-analysis.md  05-deep-analysis-feedback.md  06-architecture-decisions.md  07-critical-issues.md  08-open-questions.md  09-summary-and-next-steps.md  10-feedback.md  11-final-plan.md  12-backlog.md  13-research-tasks.md  14-current-feature-checklist.md  15-feedback.md  16-feedback.md  16-final-implementation-plan.md  17-cargo-decision.md  18-remaining-questions.md  19-final-plan-approved.md  20-high-priority-backlog.md  cli-refactoring-plan.md  phase-1-completion.md  phase-1-tasks.md  phase-2-tasks.md  phase-3-feedback-analysis-v2.md  phase-3-feedback-analysis-v3.md  phase-3-feedback-analysis.md  phase-3-plan-feedback.md  phase-3-summary.md  phase-3-tasks.md  phase-overview.md  research-cargo-integration.md  research-stable-ids.md  research-template-inventory.md  research-test-database.md
docs/reviews/: 00-review-summary.md  01-plan-compliance-review.md  02-code-quality-review.md  03-testing-review.md  04-security-review.md  05-review-feedback.md  06-plan-compliance-review-2.md  07-code-quality-review-2.md  08-testing-review-2.md  09-architecture-review.md  10-review-summary-2.md  11-review-feedback-2.md  12-entities-feedback.md  13-phase2-code-quality.md  14-phase2-testing.md  15-phase2-architecture.md  17-phase2-review-feedback.md  18-phase2-fixes-applied.md  phase-2-plan-compliance.md
legacy/: pre-commit-config.yaml.old  pyproject.toml.old
quest_guides/: entity-graph.json  graph_overrides.toml  guide.json  quest-guide.golden.json  quest-guide.json
scripts/: README.md  analyze_wiki_diffs.py  capture-npc-screenshot.py  compare_variants.py  fix_mapping_explicit_values.py  fix_mapping_issues.py  generate-mod-version.py  generate-mods-metadata.py  migrate_mapping_json.py  validate-mods-metadata.py  validate_database.py  zone_discrepancy_report.py
src/: export.sh
src/Assets/: packages.config
src/erenshor/: __init__.py
src/maps/: .env.example  .gitignore  .lintstagedrc.json  README.md  components.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
src/mods/: .gitignore  CLAUDE.md  mods-config.yaml  mods-metadata.json  run-csharpier.sh
tests/: __init__.py  conftest.py  test_database_fixtures.py
tests/fixtures/: test_erenshor.db  test_erenshor.sql
tests/integration/: __init__.py  conftest.py  test_ability_updates.py  test_character_updates.py  test_cli_flags.py  test_entity_graph.py  test_exclusion_mappings.py  test_golden.py  test_guide_compiler.py  test_idempotency.py  test_image_name_mappings.py  test_item_obtainability_real_db.py  test_item_updates.py  test_multi_entity_pages.py  test_paths.py  test_sheets_queries.py
tests/unit/: test_item_obtainability.py  test_junction_enricher.py  test_path_resolver.py  test_registry_image_name.py  test_upload_skip_logic.py
wiki/: Zones.txt
wiki/templates/: Template_MapLink.txt  Template_Zone.txt  Template_Zone_Navbox.txt  Template_Zone_Navbox__doc.txt
wiki/zones/: Abyssal_Lake.txt  Azynthi's_Garden.txt  Bellwain_Island.txt  Blacksalt_Strand.txt  Blooming_Sepulcher.txt  Braxonian_Desert.txt  Faerie's_Brake.txt  Fallen_Braxonia.txt  Fernalla's_Revival_Plains.txt  Hidden_Hills.txt  Island_Tomb.txt  Jaws_of_Sivakaya.txt  Loomingwood_Forest.txt  Lost_Cellar.txt  Malaroth's_Nesting_Grounds.txt  Mysterious_Portal.txt  Old_Krakengard.txt  Port_Azure.txt  Prielian_Cascade.txt  Prison.txt  Reliquary_Hall.txt  Ripper's_Keep.txt  Rockshade_Hold.txt  Rottenfoot.txt  Secluded_Sanctuary.txt  Shivering_Step.txt  The_Blight.txt  (+12 more)
(+3894 files in other folders)
