[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erenshor"
version = "2.0.0-alpha.1"
description = "Data mining and wiki management tool for Erenshor MMO"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Erenshor Wiki Team"},
]
keywords = ["erenshor", "wiki", "mediawiki", "game-data", "data-mining", "google-sheets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    # CLI framework
    "typer>=0.12.0",
    # Logging
    "loguru>=0.7.0",
    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # ORM and database
    "sqlmodel>=0.0.24",
    "sqlalchemy>=2.0.41",
    # Templates
    "jinja2>=3.1.0",
    # Wiki parsing
    "mwparserfromhell>=0.6.0",
    # Image processing
    "pillow>=11.0.0",
    # Google API
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    # Cross-platform paths
    "platformdirs>=4.0.0",
    # Terminal formatting
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://erenshor.wiki.gg"
Repository = "https://github.com/glockyco/erenshor-data-mining"

[project.scripts]
erenshor = "erenshor.cli.main:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/erenshor"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.17.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    # Type stubs
    "types-pillow",
    "types-jinja2",
]

[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "RET504",  # Unnecessary assignment before return
    "SIM108",  # Use ternary operator (sometimes less readable)
    "B008",    # Do not perform function calls in argument defaults (required for Typer)
    "PLC0415", # Import should be at top-level (we use local imports to avoid circular dependencies)
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "TC003",   # Move standard library import into type-checking block (false positive for runtime-needed imports)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mwparserfromhell.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "googleapiclient.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jinja2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "erenshor.cli.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/erenshor",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "unit: Fast, isolated unit tests",
    "integration: Tests with real database (28KB fixture)",
    "production: Optional tests with full database (skip if unavailable)",
    "slow: Tests that take >5 seconds",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    # Ignore pytest's PytestUnraisableExceptionWarning wrapping ResourceWarning
    # from coverage.py's SQLite database handling (not our code)
    # See: tests/unit/infrastructure/config/test_loader.py::test_deep_merge_preserves_base_nested_values
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src/erenshor"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# Disabled coverage requirement - project is in active development
# fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
